The setStaticProperty method can now handle non-string properties
git-svn-id: https://svn.apache.org/repos/asf/synapse/trunk/java@706548 13f79535-47bb-0310-9956-ffa450edef68